# dimple2-haskell

./: README.md  dimple2.cabal
src/: Dimple2.hs  Main.hs
src/Dimple2/: Base.hs  Discovery.hs  IP.hs  MulticastGroup.hs  REST.hs
tests/: Main.hs  MulticastIP.hs
